app store cards: correct spacing
Use less padding in the cards itself and specify the desired spacing
in the FlowBox.

--- a/data/application.css
+++ b/data/application.css
@@ -20,7 +20,7 @@
 }
 
 .content .app {
-  padding: 22px;
+  padding: 18px;
   margin-top: 8px;
 }
 
